# marie-curie-london-marathon

./: .env.sample  .gitignore  README.md  main.ipynb  main.py  main2.ipynb  pyproject.toml  requirements.txt
src/: data_processing.py  sys_prompt.py
